fix: equalize city card heights and align "Update Now" button to bottom

--- a/src/components/CityCard/CityCard.scss
+++ b/src/components/CityCard/CityCard.scss
@@ -212,4 +212,10 @@
       transform: translateY(1px);
     }
   }
+
+  &__body {
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
+  }
 }
